--- a/gta5.vcxproj.filters
+++ b/gta5.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClInclude Include="..\..\SDK\sdk.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Global_Variable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="ps_output.hlsl">
