Prepare ppc for camera control.

--- a/gta5.vcxproj
+++ b/gta5.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="..\..\SDK\sdk.h" />
     <ClInclude Include="Global_Variable.h" />
     <ClInclude Include="gtastate.h" />
+    <ClInclude Include="ppc.h" />
     <ClInclude Include="scripthook\enums.h" />
     <ClInclude Include="scripthook\main.h" />
     <ClInclude Include="scripthook\nativeCaller.h" />
