--- a/gta5.vcxproj.filters
+++ b/gta5.vcxproj.filters
@@ -69,5 +69,8 @@
     <FxCompile Include="ps_noflow.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
+    <FxCompile Include="ps_cable.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
